test/fail/local-assign-undeclared.rnp
a = 1;
---
 --> fail/local-assign-undeclared.rnp:1:1
  |
1 | a = 1;
  | ^ a is not declared
  |
